--- a/nlp_input/ontology.yaml
+++ b/nlp_input/ontology.yaml
@@ -1,12 +1,4 @@
-# either a standalone config.yml
-mode: auto           # off|light|full|auto
-model_path: word2vec.model
-exp_topn: 40
-exp_thresh: 0.70
-exp_min_count: 10
-context_k: 1
-
-# or inline inside ontology.yaml
+# ---- NLP + expansion config (unchanged) ----
 _nlp:
   mode: auto
   model_path: word2vec.model
@@ -36,30 +28,40 @@ scale:
     - envelope thermal load
     - building thermal load
     - ubem
+    - urban building energy model   # UBEM
     - bem
+    - building energy model         # BEM
 
   system_model:
-    # canonical HVAC systems/components (no “model” suffix)
     - hvac
+    - heating ventilation and air conditioning   # HVAC
     - ac
+    - air conditioning                           # AC
     - acmv
+    - air conditioning and mechanical ventilation  # ACMV
     - mv
+    - mechanical ventilation                     # MV
     - hrmv
+    - heat recovery mechanical ventilation       # HRMV
     - ahu            # air handling unit
-    - air handling unit
     - doas           # dedicated outdoor air system
-    - dedicated outdoor air system
     - vav            # variable air volume
+    - variable air volume                        # VAV
     - fcu            # fan coil unit
+    - fan coil unit                               # FCU
     - ashp           # air-source heat pump
+    - air-source heat pump                        # ASHP
     - gshp           # ground-source heat pump
+    - ground-source heat pump                     # GSHP
     - heat pump
     - chiller
     - chiller plant
     - boiler
     - cooling tower
     - vrf
+    - variable refrigerant flow                   # VRF
     - vrv
+    - variable refrigerant volume                 # VRV
     - coil
     - cooling coil
     - secondary cooling coil
@@ -67,8 +69,8 @@ scale:
     - fresh air damper
     - return air damper
     - vsd fan
+    - variable speed drive fan                    # VSD
     - pump
-
 
   occupancy_model:
     - people number
@@ -89,14 +91,15 @@ scale:
     - outdoor temperature
 
 model_paradigm:
-
-
   whitebox:
     - energyplus
     - trnsys
+    - transient system simulation                 # TRNSYS
     - ies-ve
+    - integrated environmental solutions virtual environment  # IES-VE
     - modelica
     - ida-ice
+    - indoor climate and energy                   # IDA-ICE
     - physics-based
     - first-principles
 
@@ -107,35 +110,47 @@ model_paradigm:
     - kalman filter
     - semi-empirical
     - hybrid
-    - resistor-capacitor
     - rc model
+    - resistor-capacitor model                    # RC
     - rc network
+    - resistor-capacitor network                  # RC
+
   blackbox:
     - machine learning
     - statistical
     - data-driven
-    - linear
+    - linear model
     - linear regression
     - lasso
     - ridge
     - elastic net
     - neural networks
-    - Convolutional Neural Networks
-    - Artificial Neural Networks
-    - ANN
-    - CNN
-    - BCNN
-    - RNN
+    - ann
+    - artificial neural network                   # ANN
+    - cnn
+    - convolutional neural network                # CNN
+    - bcnn
+    - bayesian convolutional neural network       # BCNN
+    - rnn
+    - recurrent neural network                    # RNN
     - lstm
+    - long short-term memory                      # LSTM
     - gru
+    - gated recurrent unit                        # GRU
     - svm
+    - support vector machine                      # SVM
     - svr
+    - support vector regression                   # SVR
     - random forest
     - xgboost
+    - extreme gradient boosting                   # XGBoost
     - bayesian network
     - hmm
+    - hidden markov model                         # HMM
     - k-nn
+    - k-nearest neighbors                         # KNN
     - knn
+    - k-nearest neighbors                         # KNN
     - naive bayes
     - gaussian process
     - deep learning
@@ -144,94 +159,202 @@ optimization_methods:
   reinforcement_learning:
     - q-learning
     - rl
+    - reinforcement learning                      # RL
     - drl
-    - reinforcement learning
+    - deep reinforcement learning                 # DRL
     - policy gradient
     - actor-critic
     - dqn
+    - deep q-network                              # DQN
     - sarsa
+    - state–action–reward–state–action            # SARSA
+
   classical_control_and_mpc:
     - pid
+    - proportional-integral-derivative            # PID
     - pi controller
+    - proportional-integral controller            # PI
     - mpc
+    - model predictive control                    # MPC
     - stochastic mpc
     - robust mpc
     - economic mpc
     - lqr
-  metaheuristics_and_optim:
-    - "milp"
-    - "mixed-integer"
-    - "linear programming"
-    - "quadratic programming"
-    - "convex optimization"
-    - "genetic algorithm"
-    - "ga"
-    - "simulated annealing"
-    - "particle swarm"
-    - "pso"
-    - "bayesian optimization"
-    - "multi-objective optimization"
+    - linear quadratic regulator                  # LQR
 
+  metaheuristics_and_optim:
+    - milp
+    - mixed-integer linear programming            # MILP
+    - mixed-integer
+    - linear programming
+    - quadratic programming
+    - convex optimization
+    - genetic algorithm
+    - ga
+    - genetic algorithm                           # GA
+    - simulated annealing
+    - particle swarm
+    - pso
+    - particle swarm optimization                 # PSO
+    - bayesian optimization
+    - multi-objective optimization
 
 applications:
   control:
-    - "model predictive control"
-    - "mpc"
-    - 'predictive control'
-    - 'reinforcement learning based control'
+    - model predictive control
+    - mpc
+    - model predictive control                    # MPC
+    - predictive control
+    - reinforcement learning based control
   fdd:
-    - "fault detection and diagnosis"
-    - "fdd"
+    - fault detection and diagnosis
+    - fdd
+    - fault detection and diagnosis               # FDD
   energy_flexibility:
-    - "demand response"
-    - "load shifting"
-    - "load shedding"
-    - "energy storage"
+    - demand response
+    - load shifting
+    - load shedding
+    - energy storage
   performance tracking:
-    - "performance tracking"
-    - "performance monitoring"
-    - "commissioning"
+    - performance tracking
+    - performance monitoring
+    - commissioning
   performance analysis:
-    - "performance analysis"
-    - "performance evaluation"
-    - "performance optimisation" 
-    - "performance optimization"
+    - performance analysis
+    - performance evaluation
+    - performance optimisation 
+    - performance optimization
 
 data_types:
   metering:
-    - "smart meter"
-    - "electricity meter"
-    - "kwh"
-    - "kw"
+    - metering
+    - submetering
   air_temperature:
-    - "air temperature"
-    - "dry-bulb"
-    - "t_air"
+    - air temperature
+    - dry-bulb temperature
+    - indoor air temperature
+    - room temperature
+    - supply air temperature
+    - mean radiant temperature
+    - operative temperature
+    - ambient temperature
   air_quality:
-    - "co2"
-    - "pm2.5"
-    - "pm10"
-    - "voc"
-    - "concentration"
+    - co2 concentration
+    - pm2.5 concentration
+    - pm10 concentration
+    - voc concentration
   environment:
-    - "outdoor temperature"
-    - "humidity"
-    - "solar irradiance"
-    - "wind speed"
-    - "weather station"
+    - outdoor temperature
+    - outdoor humidity
+    - solar irradiance
+    - wind speed
+    - wind velocity
+    - wind direction
+    - ambient temperature
   occupancy:
-    - "occupancy"
-    - "presence"
-    - "people count"
-    - "wifi probes"
-    - "ble"
+    - occupancy
+    - presence
+    - people count
+    - wifi
   hvac_signals:
-    - "valve position"
-    - "damper"
-    - "supply air"
-    - "return air"
-    - "air flow"
-    - "water flow"
+    - valve position
+    - valve command
+    - damper position
+    - damper command
+    - sat
+    - supply air temperature                      # SAT
+    - rat
+    - return air temperature                      # RAT
+    - mat
+    - mixed air temperature                       # MAT
+    - saf
+    - supply air flow                             # SAF
+    - raf
+    - return air flow                             # RAF
+    - air flow
+    - water flow
+    - chilled water flow
+    - hot water flow
+    - supply water temperature
+    - return water temperature
+    - fan speed
+    - fan status
+    - compressor status
+    - heater status
+    - cooling coil valve position
+    - heating coil valve position
+    - discharge air temperature
+    - setpoint
+    - temperature setpoint
+    - pressure setpoint
   thermal_comfort:
-    - "pmv"
-    - "ppd"
+    - pmv
+    - predicted mean vote                         # PMV
+    - ppd
+    - predicted percentage dissatisfied           # PPD
+    - thermal comfort
+    - operative temperature
+    - mrt
+    - mean radiant temperature                    # MRT
+    - globe temperature
+    - air velocity
+
+# ---- Global alias map: alias → canonical ----
+_alias_map:
+  # paradigms & ML
+  ann: artificial neural network
+  cnn: convolutional neural network
+  rnn: recurrent neural network
+  lstm: long short-term memory
+  gru: gated recurrent unit
+  svm: support vector machine
+  svr: support vector regression
+  knn: k-nearest neighbors
+  bcnn: bayesian convolutional neural network
+  hmm: hidden markov model
+  rc: resistor-capacitor model
+
+  # optimization & control
+  rl: reinforcement learning
+  drl: deep reinforcement learning
+  dqn: deep q-network
+  sarsa: state–action–reward–state–action
+  pid: proportional-integral-derivative
+  pi: proportional-integral controller
+  mpc: model predictive control
+  lqr: linear quadratic regulator
+  milp: mixed-integer linear programming
+  ga: genetic algorithm
+  pso: particle swarm optimization
+
+  # applications (common shorthands)
+  fdd: fault detection and diagnosis
+
+  # data types & signals
+  sat: supply air temperature
+  rat: return air temperature
+  mat: mixed air temperature
+  saf: supply air flow
+  raf: return air flow
+  pmv: predicted mean vote
+  ppd: predicted percentage dissatisfied
+  mrt: mean radiant temperature
+  co2: co2            # keep as itself (helps canonicalise casing)
+  ghi: global horizontal irradiance
+  dni: direct normal irradiance
+  dhi: diffuse horizontal irradiance
+  tvoc: tvoc
+  aqi: air quality index
+
+  # systems & scale
+  ubem: urban building energy model
+  bem: building energy model
+  vrf: variable refrigerant flow
+  vrv: variable refrigerant volume
+  ashp: air-source heat pump
+  gshp: ground-source heat pump
+  ahu: air handling unit
+  doas: dedicated outdoor air system
+  vav: variable air volume
+  fcu: fan coil unit
+  vsd: variable speed drive
